--- a/src/sections/Team/Team.module.css
+++ b/src/sections/Team/Team.module.css
@@ -1,6 +1,18 @@
 .container {
+  margin: 80px auto;
+}
+
+.title {
+  font-size: 40px;
+  color: var(--primary);
+  font-weight: 600;
+}
+
+.subContainer {
   display: flex;
   justify-content: space-around;
+  width: 80%;
+  margin: 60px auto;
 }
 
 .member img {
@@ -8,4 +20,8 @@
   height: 200px;
   object-fit: cover;
   border-radius: 50%;
+}
+
+.member {
+  font-size: 22px;
 }
