--- a/src/sections/Hero/Hero.module.css
+++ b/src/sections/Hero/Hero.module.css
@@ -1,10 +1,12 @@
 .container {
-  background-color: #048a52;
+  background-color: rgb(0, 0, 0, 0.6);
   color: white;
   height: 610px;
+  width: 100vw;
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
 }
 .mainText {
   font-size: 54px;
@@ -32,4 +34,22 @@
   border: none;
   color: var(--primary);
   font-weight: 600;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.buttons button:hover {
+  transform: translate(0, -5px);
+}
+
+.video {
+  width: 100vw;
+  height: 610px;
+  object-fit: cover;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  z-index: -1;
 }
