--- a/src/sections/Navbar/Navbar.module.css
+++ b/src/sections/Navbar/Navbar.module.css
@@ -4,6 +4,29 @@
   position: fixed;
   top: 0;
   left: 0;
-  padding: 0px 40px;
-  color: white;
+  padding: 12px 80px;
+  z-index: 99;
+  background-color: white;
+  justify-content: space-between;
+  align-items: center;
+  box-shadow: 0px 15px 10px -15px gray;
+}
+
+.logo {
+  color: var(--primary);
+  margin: 0;
+  cursor: pointer;
+}
+
+.subContainer {
+  display: flex;
+  gap: 24px;
+}
+.subContainer p {
+  margin: 0;
+  cursor: pointer;
+  font-weight: 600;
+}
+.subContainer p:hover {
+  color: var(--primary);
 }
