--- a/src/sections/Team/Team.module.css
+++ b/src/sections/Team/Team.module.css
@@ -26,3 +26,22 @@
   font-size: 22px;
   font-weight: 600;
 }
+
+@media only screen and (max-width: 600px) {
+  .title {
+    font-size: 28px;
+  }
+  .subContainer {
+    flex-wrap: wrap;
+    width: 100vw;
+    margin-top: 20px;
+  }
+  .member img {
+    width: 150px;
+    height: 150px;
+  }
+  .member {
+    font-size: 18px;
+    margin-bottom: 32px;
+  }
+}
